--- a/cmi/Settings.apk/res/values/strings.xml
+++ b/cmi/Settings.apk/res/values/strings.xml
@@ -1226,7 +1226,7 @@ Here's what might be wrong:
     <string name="bluetooth_menu_advanced">Advanced</string>
     <string name="bluetooth_message_access_dialog_content">"An untrusted Bluetooth device, %1$s, wants to access your messages.
 
-You haven’t connected to %2$s before."</string>
+You haven't connected to %2$s before."</string>
     <string name="bluetooth_message_access_dialog_title">Allow access to messages?</string>
     <string name="bluetooth_message_access_notification_content">Untrusted device wants to access your messages. Tap for details.</string>
     <string name="bluetooth_message_move_out_of_blacklist">Unblock %1$s now?</string>
@@ -1275,7 +1275,7 @@ You haven’t connected to %2$s before."</string>
     <string name="bluetooth_pb_remember_choice">Don’t ask again</string>
     <string name="bluetooth_phonebook_access_dialog_content">"An untrusted Bluetooth device, %1$s, wants to access your contacts and call log. This includes data about incoming and outgoing calls.
 
-You haven’t connected to %2$s before."</string>
+You haven't connected to %2$s before."</string>
     <string name="bluetooth_phonebook_access_dialog_title">Allow access to contacts and call log?</string>
     <string name="bluetooth_phonebook_access_notification_content">Untrusted device wants to access your contacts and call log. Tap for details.</string>
     <string name="bluetooth_phonebook_request">Phone book access request</string>
@@ -2097,7 +2097,7 @@ To resume using your phone, you need to perform a factory reset. When you set up
     <string name="custom_color">Custom</string>
     <string name="custom_gesture_title">Custom gestures</string>
     <string name="custom_wifi_name_title">Edit Wi-Fi name</string>
-    <string name="customize_knock_gesture">Custom knuckle gestures</string>
+    <string name="customize_knock_gesture" />
     <string name="cutout_mode_always">Always show notch</string>
     <string name="cutout_mode_default">Auto</string>
     <string name="cutout_mode_settings_title">Some apps may be displayed incorrectly if you customize the way notch is displayed.</string>
@@ -2660,7 +2660,7 @@ If this keeps happening, you may need to uninstall the app to improve battery pe
     <string name="done_button">Done</string>
     <string name="double_click_power_key">Double press the Power button</string>
     <string name="double_click_volume_down_when_lock">Double press Volume down when the screen is locked</string>
-    <string name="double_knock">Knuckle double tap</string>
+    <string name="double_knock" />
     <string name="double_tap_power_for_camera_suggestion_title">Open camera quickly</string>
     <string name="double_tap_power_for_camera_summary">To quickly open camera, press the power button twice. Works from any screen.</string>
     <string name="double_tap_power_for_camera_title">Quickly open camera</string>
@@ -2923,6 +2923,13 @@ For more details, contact your organization's admin."</string>
     <string name="exterior">Color scheme</string>
     <string name="external_code_size_label">USB storage app</string>
     <string name="external_data_size_label">USB storage data</string>
+    <string name="external_ram_dialog_btn_cancel">Later</string>
+    <string name="external_ram_dialog_btn_ok">Reboot</string>
+    <string name="external_ram_dialog_message">Reboot your device to apply changes.</string>
+    <string name="external_ram_dialog_title">Reboot device</string>
+    <string name="external_ram_summary">"Add %1$s %2$s of RAM by occupying storage. Use this feature only when there's enough storage space available on your device."</string>
+    <string name="external_ram_title">Memory extension</string>
+    <string name="external_ram_toast">"Can't use memory extension due to insufficient storage space"</string>
     <string name="external_source_switch_title">Allow from this source</string>
     <string name="external_source_trusted">Allowed</string>
     <string name="external_source_untrusted">Not allowed</string>
@@ -3419,6 +3426,8 @@ When you turn on automatic backup, device and app data is periodically saved rem
     <string name="header_category_system">System</string>
     <string name="header_category_wireless_networks">Wireless &amp; networks</string>
     <string name="header_data_and_synchronization">Data &amp; synchronization</string>
+    <string name="headset_aac">AAC</string>
+    <string name="headset_aptx-adapter">Qualcomm® aptX™ Adaptive</string>
     <string name="headset_connectiong">Connecting…</string>
     <string name="headset_find_both">Both</string>
     <string name="headset_find_cancel">Cancel</string>
@@ -3440,6 +3449,7 @@ When you turn on automatic backup, device and app data is periodically saved rem
     <string name="headset_notification_switch_title">Notification shade widget</string>
     <string name="headset_remove_message">Unpair device?</string>
     <string name="headset_remove_message_indicate">%1$s will be unpaired from all the devices associated with this Mi Account.</string>
+    <string name="headset_sbc">SBC</string>
     <string name="headset_settings_title">Sound effects</string>
     <string name="headset_unsaved_device">Remove the device</string>
     <string name="headset_unsaved_devices">Used on other devices</string>
@@ -3936,17 +3946,17 @@ Open Xiaomi Cloud and restore items from there."</string>
     <string name="kid_space_settings">Kid space</string>
     <string name="kilobyteShort">KB</string>
     <string name="kilobyte_per_second">KB/s</string>
-    <string name="knock_edge_area_invalid">"This gesture doesn't work near screen edges"</string>
-    <string name="knock_guide_dialog_title">Select an action for this gesture. You can change it later in Settings > Additional settings > Button shortcuts.</string>
-    <string name="knock_guide_drive_desc">Take screenshots while driving</string>
-    <string name="knock_guide_launch_desc">Trigger Mi AI when your phone is lying on the table</string>
-    <string name="knock_guide_set_screenshot">Screenshot</string>
-    <string name="knock_guide_set_voiceassist">Mi AI</string>
-    <string name="knock_guide_sub_title">You can trigger Mi AI or take screenshots by tapping the screen with your knuckle</string>
-    <string name="knock_guide_title">Knuckle double tap</string>
-    <string name="knock_long_press_horizontal_slid">Press and swipe horizontally with a knuckle</string>
-    <string name="knock_slide_shape">Draw a circle with a knuckle</string>
-    <string name="knock_slide_v">Draw V with a knuckle</string>
+    <string name="knock_edge_area_invalid" />
+    <string name="knock_guide_dialog_title" />
+    <string name="knock_guide_drive_desc" />
+    <string name="knock_guide_launch_desc" />
+    <string name="knock_guide_set_screenshot" />
+    <string name="knock_guide_set_voiceassist" />
+    <string name="knock_guide_sub_title" />
+    <string name="knock_guide_title" />
+    <string name="knock_long_press_horizontal_slid" />
+    <string name="knock_slide_shape" />
+    <string name="knock_slide_v" />
     <string name="label_available">Available networks</string>
     <string name="label_mi_stats">Mi analytics</string>
     <string name="language_and_input_for_work_category_title">Work profile keyboards &amp; tools</string>
@@ -4648,6 +4658,7 @@ You can't reverse this action."</string>
     <string name="miheadset_moreSettingsInAi">Additional settings</string>
     <string name="miheadset_multi_connect_mode">Multipoint</string>
     <string name="miheadset_multi_connect_mode_summary">Connect to multiple devices at the same time</string>
+    <string name="miheadset_network_not_available">Check your network settings and try again</string>
     <string name="miheadset_next">Next track</string>
     <string name="miheadset_ok_device">OK</string>
     <string name="miheadset_openAnc">Noise cancellation</string>
@@ -5537,6 +5548,8 @@ Read and agree to %s before using this service."</string>
     <string name="permission_manage_title">%s permissions</string>
     <string name="permission_manager">Permissions</string>
     <string name="permission_mgr">Permissions</string>
+    <string name="permission_records">Permission usage</string>
+    <string name="permission_records_summary">Summary of how apps use permissions</string>
     <string name="permission_settings_summary">Manage permissions related to location, storage, phone, messages, and contacts.</string>
     <string name="permission_settings_title">App permissions</string>
     <string name="permissions_label">Permissions</string>
