--- a/venus/Notes.apk/res/values/strings.xml
+++ b/venus/Notes.apk/res/values/strings.xml
@@ -566,6 +566,7 @@
     <string name="pref_quick_note_desc">Use the shortcut at the edge of the screen to create notes and tasks, as well as save copied URLs, text, and images to Notes.</string>
     <string name="pref_remind_type_summary">Play reminder sound in Silent mode</string>
     <string name="pref_remind_type_summary_new">Ignore Silent mode and keep playing sound until the alarm is turned off</string>
+    <string name="pref_remind_type_summary_new_2">Play sound even when Silent or DND mode is on</string>
     <string name="pref_remind_type_title">Ignore Silent mode</string>
     <string name="pref_remind_type_title_new">High-priority reminders</string>
     <string name="pref_title_cloud_trash_bin">Deleted notes in the cloud</string>
@@ -604,10 +605,10 @@
     <string name="repeat_mode_set_item_none">Never</string>
     <string name="repeat_mode_set_item_normal_workday">Monday to Friday</string>
     <string name="repeat_mode_set_item_week">Every week (%s)</string>
-    <string name="repeat_mode_set_item_week_detail">Every week (%s)</string>
+    <string name="repeat_mode_set_item_week_detail">%s</string>
     <string name="repeat_mode_set_item_year">Every year (%s)</string>
-    <string name="repeat_mode_set_item_year_detail">Every year (%s)</string>
-    <string name="repeat_mode_set_item_year_detail_day">MM/dd</string>
+    <string name="repeat_mode_set_item_year_detail">%s</string>
+    <string name="repeat_mode_set_item_year_detail_day">MMM dd</string>
     <string name="repeat_mode_set_title">Repeat</string>
     <string name="repeat_mode_week">Every week</string>
     <string name="repeat_mode_year">Every year</string>
