--- a/venus/SecurityCenter.apk/res/values/strings.xml
+++ b/venus/SecurityCenter.apk/res/values/strings.xml
@@ -213,6 +213,7 @@
     <string name="app_behavior_about_content_no_link">"MIUI can show when apps launched other apps, autostarted, used permissions, and performed sensitive actions. Due to Android version compatibility issues, some of these records might not be accurate. If you find an app behavior record that isn't accurate, report it to us using the \"Services &amp; feedback\" app."</string>
     <string name="app_behavior_about_negative">Report inaccuracies</string>
     <string name="app_behavior_about_positive">Got it</string>
+    <string name="app_behavior_about_setting">Settings</string>
     <string name="app_behavior_access_gallery">%1s accessed Gallery</string>
     <string name="app_behavior_access_gallery_single">This app accessed Gallery</string>
     <string name="app_behavior_access_sociality">%1s accessed social media apps</string>
@@ -250,15 +251,27 @@
     <string name="app_behavior_contacts_bg">%1s accessed your contacts in the background</string>
     <string name="app_behavior_contacts_bg_single">This app accessed your contacts in the background</string>
     <string name="app_behavior_contacts_single">This app accessed your contacts</string>
+    <string name="app_behavior_dashboard_desc">Activity within last %d hours</string>
+    <string name="app_behavior_dashboard_total_usage_title">View all records</string>
+    <string name="app_behavior_dashboard_usage">App behavior</string>
+    <string name="app_behavior_dashboard_usage_list_title">View by permission</string>
+    <string name="app_behavior_dashboard_usage_unit">%1$s / %2$s</string>
     <string name="app_behavior_delete_pic">%1s deleted items from Gallery</string>
     <string name="app_behavior_delete_pic_single">This app deleted items from Gallery</string>
     <string name="app_behavior_denied">Restrict</string>
     <string name="app_behavior_desc_allow_once">Allowed at %1$s</string>
+    <string name="app_behavior_desc_allowed">Allowed</string>
+    <string name="app_behavior_desc_allowed_on_background">Allowed in the background</string>
+    <string name="app_behavior_desc_denied">Denied</string>
+    <string name="app_behavior_desc_denied_on_background">Denied in the background</string>
     <string name="app_behavior_desc_deny_once">Restricted at %1$s</string>
+    <string name="app_behavior_desc_other_perm_allowed">Latest activity: %s</string>
+    <string name="app_behavior_desc_other_perm_denied">Activity within last %d hours</string>
     <string name="app_behavior_desc_virtual_once">Returned a blank message at %1$s</string>
     <string name="app_behavior_door">App behavior</string>
     <string name="app_behavior_get_install">%1s accessed the list of your apps</string>
     <string name="app_behavior_get_install_single">This app accessed the list of your apps</string>
+    <string name="app_behavior_global_settings_perm_tips">Receive a status bar alert when apps record audio or use camera</string>
     <string name="app_behavior_header_time">MMMM dd</string>
     <string name="app_behavior_key_audio">Recording audio</string>
     <string name="app_behavior_key_camera">Taking photos</string>
@@ -320,6 +333,11 @@
     <string name="app_behavior_read_clipboard_bg">%1s accessed items in the clipboard in the background</string>
     <string name="app_behavior_recognition">%1s accessed your activity info</string>
     <string name="app_behavior_recognition_single">This app accessed your activity info</string>
+    <string name="app_behavior_record_setting_button_title">Show behavior of system services</string>
+    <string name="app_behavior_record_setting_show_system">Show behavior of system services</string>
+    <string name="app_behavior_record_setting_show_system_desc">"Turn on to view the behavior of basic system services. To ensure the stability of the system, these services will use the required permissions some of which can't be restricted."</string>
+    <string name="app_behavior_record_setting_show_system_title">Show behavior of system services</string>
+    <string name="app_behavior_record_setting_title">Behavior records</string>
     <string name="app_behavior_search">Search</string>
     <string name="app_behavior_sensor">%1s accessed sensor data</string>
     <string name="app_behavior_sensor_single">This app accessed sensor data</string>
@@ -483,8 +501,6 @@ You will not lose any app data."</string>
     <string name="app_manager_uninstall_xspace_app_dlg_msg">Uninstalling dual app will remove all app data.</string>
     <string name="app_manager_uninstall_xspace_app_dlg_title">Uninstall dual app?</string>
     <string name="app_manager_unstall_application">Uninstall</string>
-    <string name="app_manager_update">Update</string>
-    <string name="app_manager_updater_notify_message">Update apps to access new features</string>
     <string name="app_managere_not_have_app">Empty</string>
     <string name="app_manger_des_separator">", "</string>
     <string name="app_mobile">Mobile data</string>
@@ -891,6 +907,7 @@ You will not lose any app data."</string>
     <string name="cetus_invisible_mode_warn_all">"You're incognito. Microphone, camera, and location permissions are suspended."</string>
     <string name="cetus_invisible_mode_warn_camera">"You're incognito. Camera permissions are suspended."</string>
     <string name="cetus_invisible_mode_warn_location">"You're incognito. Location permissions are suspended."</string>
+    <string name="cetus_invisible_mode_warn_open">Incognito mode suspends microphone, camera, and location-related permissions for all apps. Turn on now?</string>
     <string name="cetus_invisible_mode_warn_record_audio">"You're incognito. Microphone permissions are suspended."</string>
     <string name="charger_detect_button_ok">Got it</string>
     <string name="charger_detect_info1">Check whether the power adapter and cable are properly connected.</string>
@@ -1375,6 +1392,34 @@ You must understand that this feature is provided for your reference only. The w
     <string name="ew_main_warning_list">View warnings</string>
     <string name="ew_main_warning_list_tips">View</string>
     <string name="ew_main_warning_list_title">View warning history</string>
+    <string name="ew_monitor_content">地震监测是手机通过低功耗传感器感应到地震波后，系统快速通过AI算法测算地震信息，并第一时间向受影响地区群众发出预警，为更多人争取避险时间，保障人身安全。</string>
+    <string name="ew_monitor_exit">退出地震监测志愿者</string>
+    <string name="ew_monitor_exit_content">地震监测志愿者帮助更多人更快获取地震信息。感谢您（NO.%s）为地震监测做出的贡献，您确认退出地震监测志愿者吗？</string>
+    <string name="ew_monitor_exit_title">提示</string>
+    <string name="ew_monitor_have_been">我已成为</string>
+    <string name="ew_monitor_info_title">地震监测是什么？</string>
+    <string name="ew_monitor_join_number">加入人数</string>
+    <string name="ew_monitor_join_path">加入路径：小米手机-手机管家-地震预警-地震监测志愿者</string>
+    <string name="ew_monitor_my_content">地震监测是手机通过低功耗传感器感应到地震波后，系统快速通过AI算法测算地震信息，并第一时间向受影响地区群众发出预警，为更多人争取避险时间，保障人身安全。</string>
+    <string name="ew_monitor_number_prex">NO.%s</string>
+    <string name="ew_monitor_open">立即加入</string>
+    <string name="ew_monitor_read_privacy"><Data>已阅读并同意&lt;a href=\"%1$s\">《隐私政策》&lt;/a></Data></string>
+    <string name="ew_monitor_share">发送给朋友</string>
+    <string name="ew_monitor_slogan">"加入地震监测
+共建平安中国"</string>
+    <string name="ew_monitor_summary1">"手机
+也是地震监测仪"</string>
+    <string name="ew_monitor_summary2">"报送地震消息
+共建监测网络"</string>
+    <string name="ew_monitor_summary3">"帮助更多人
+更快获取地震信息"</string>
+    <string name="ew_monitor_support">小米与成都高新减灾研究所联合研发</string>
+    <string name="ew_monitor_support_rom">*部分小米/Redmi手机及MIUI版本支持此功能</string>
+    <string name="ew_monitor_thanks_tips">"感谢您成为第%s位
+地震监测志愿者"</string>
+    <string name="ew_monitor_title">地震监测志愿者</string>
+    <string name="ew_monitor_title_spilt">"地震监测
+志愿者"</string>
     <string name="ew_not_support_area">"Warnings aren't supported in this area"</string>
     <string name="ew_push_message">Estimated intensity: %s. Expect slight shaking near you.</string>
     <string name="ew_push_title">Earthquake warning for %s</string>
@@ -1884,6 +1929,8 @@ Record sequences and use them anytime!"</string>
     <string name="gb_signed_gift_loading_summary">Just a sec…</string>
     <string name="gb_signed_title">Checked in this month</string>
     <string name="gb_sound_audition">Try</string>
+    <string name="gb_storage_game_dialog_button_timer">%ds</string>
+    <string name="gb_storage_game_dialog_message">您下载的游戏将自动收录至游戏加速内，桌面不再显示游戏图标。您确定开启收纳功能吗？</string>
     <string name="gb_storage_game_uninstall">Uninstall games</string>
     <string name="gb_storage_summary">"Don't show the games that were added to the gamebox on the Home screen"</string>
     <string name="gb_storage_title">Remove added games from Home screen</string>
@@ -2510,6 +2557,7 @@ Your device is %d%% faster now."</string>
     <string name="net_boosting">Boosting speed…</string>
     <string name="net_delay_title">Delay</string>
     <string name="net_overdue">Session ended</string>
+    <string name="network_assistant_privacy">To keep track of data usage by app, we collect information such as package names, Wi-Fi and mobile data usage, peak and off-peak data usage, and when Wi-Fi and mobile data is on. This information is stored locally on your device.</string>
     <string name="network_blocked_connected_open_wifi">Connected to public network</string>
     <string name="network_blocked_notification_summary">Test network</string>
     <string name="network_blocked_switch_wifi">Switch networks</string>
@@ -3473,8 +3521,10 @@ Try using another Ethernet cable to connect your router. If you suspect there's 
     <string name="privacy_empty_location">"Didn't access location today"</string>
     <string name="privacy_empty_record">"Didn't record audio today"</string>
     <string name="privacy_empty_storage">"Didn't access storage today"</string>
+    <string name="privacy_global_guide_permission_guide_text">"You'll receive a status bar alert when apps record audio or use camera. To learn which app does that, tap the alert."</string>
     <string name="privacy_guide_permission_guide_text">You can receive an alert in status bar when apps access your location, record audio, or take photos.</string>
     <string name="privacy_guide_permission_use_text">MIUI will count and display the number of times an app uses sensitive permissions, including location, contact, call history, and storage access, as well as recording audio. You can learn how many times each app uses these permissions and determine whether you need to adjust your permission settings.</string>
+    <string name="privacy_hide_other_permissions">Hide other permissions</string>
     <string name="privacy_informed_title">Stats</string>
     <string name="privacy_location_info_summary">Manage access to your location</string>
     <string name="privacy_location_info_title">Location info</string>
@@ -3597,6 +3647,7 @@ While calibrating, MIUI will send a text message to your carrier to receive the 
     <string name="privacy_search_key_7">Location info</string>
     <string name="privacy_search_key_8">Privacy mask</string>
     <string name="privacy_search_key_9">Virtual ID</string>
+    <string name="privacy_show_other_permissions">Show other permissions</string>
     <string name="privacy_show_password">Show passwords</string>
     <string name="privacy_show_password_summary">Keep passwords visible for a short time</string>
     <string name="privacy_special_permission_summary">Monitor how apps use sensitive permissions</string>
@@ -4462,6 +4513,7 @@ Formatting will erase existing content on the ^2. To avoid losing content, back 
     <string name="timeshow_h_int">%dh</string>
     <string name="timeshow_m">%dm</string>
     <string name="timeshow_s">%ds</string>
+    <string name="tips">提示</string>
     <string name="tips_dialog_title">"Don't know your limit"</string>
     <string name="tips_message">"To view your data plan's details, dial %2$s (%1$s)."</string>
     <string name="tips_of_app_manage">Delete rarely used apps to save storage</string>
