--- a/venus/framework-ext-res.apk/res/values/strings.xml
+++ b/venus/framework-ext-res.apk/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="application_cannot_open_alipay_health_code">"Couldn't open Alipay health code"</string>
     <string name="application_cannot_open_alipay_payment_code">"Couldn't open Alipay payment code"</string>
     <string name="application_cannot_open_alipay_scanner">"Couldn't open Alipay scanner"</string>
+    <string name="application_cannot_open_au_pay">Install au PAY first</string>
     <string name="application_cannot_open_weixin_health_code">"Couldn't open WeChat health code"</string>
     <string name="application_cannot_open_weixin_payment_code">"Couldn't open WeChat payment code"</string>
     <string name="application_cannot_open_weixin_scanner">"Couldn't open WeChat scanner"</string>
@@ -150,6 +151,11 @@
     <string name="device_type_pc">Computer</string>
     <string name="disable_nfc">Turned off NFC for wireless charging</string>
     <string name="disable_nfc_reverse">Turned off NFC for reverse wireless charging</string>
+    <string name="dock_tip_floatwindow">Hold the bar and drag it to the edge of the screen to enter split-screen view.</string>
+    <string name="dock_tip_splitscreen_landscape_drag">Drag the bar horizontally to swap the positions of the two app windows.</string>
+    <string name="dock_tip_splitscreen_landscape_float">Hold and drag downwards to switch to a floating window.</string>
+    <string name="dock_tip_splitscreen_portrait_drag">Drag the bar vertically to swap the positions of the two app windows.</string>
+    <string name="dock_tip_splitscreen_portrait_float">Hold and drag to the left or right side of the screen to switch to a floating window.</string>
     <string name="double_click_power_key">none</string>
     <string name="double_knock">none</string>
     <string name="eighthours">8 hours</string>
@@ -227,6 +233,8 @@
     <string name="miaudiovisual_notification_title">Audio and visual effects</string>
     <string name="miui">miui</string>
     <string name="miui_forbid_poweroff_when_device_locked">"Can't power off, device is locked."</string>
+    <string name="miui_multiwindow_not_support_small_window">"%1$s doesn't support floating windows"</string>
+    <string name="miui_multiwindow_not_support_split">"%1$s doesn't support Split screen"</string>
     <string name="miui_screen_ratio_hint">Screen ratio issues</string>
     <string name="miui_screen_ratio_hint_dont_show_again">"Don't show again"</string>
     <string name="miui_screen_ratio_hint_go_to_settings">Go to Settings</string>
@@ -378,7 +386,7 @@
     <string name="status_bar_toggle_power_mode_action">com.android.settings/com.android.settings.Settings$BatterySettingsActivity</string>
     <string name="status_bar_toggle_quiet_mode">DND</string>
     <string name="status_bar_toggle_quiet_mode_action">com.android.settings/com.android.settings.Settings$ZenModeSettingsActivity</string>
-    <string name="status_bar_toggle_rotate">Rotate off</string>
+    <string name="status_bar_toggle_rotate">Lock orientation</string>
     <string name="status_bar_toggle_rotate_action">com.android.settings/com.android.settings.Settings$DisplaySettingsActivity</string>
     <string name="status_bar_toggle_screen_button">Buttons</string>
     <string name="status_bar_toggle_screenshot">Screenshot</string>
@@ -406,6 +414,8 @@
     <string name="three_gesture_down">screen_shot</string>
     <string name="throwing_print">Print</string>
     <string name="throwing_screen">Cast</string>
+    <string name="tip_close_screen_phone" />
+    <string name="tip_use_front_camera" />
     <string name="tips_prompt_enable_midrop">Mi Share</string>
     <string name="total">DND</string>
     <string name="total_description">Silence sounds and turn off vibration for all items except the alarm clock</string>
@@ -428,7 +438,7 @@
     <string name="wifi_assistant_wifi_no_internet">This Wi-Fi network has no access to the internet</string>
     <string name="wifi_assistant_wifi_no_internet_detail">Tap to view details</string>
     <string name="wireless_charging_notification_message1">"Couldn't find wireless devices to charge. Reverse wireless charging is turned off now."</string>
-    <string name="wireless_charging_notification_message2">The battery is less than 30% charged. Reverse wireless charging is turned off now.</string>
+    <string name="wireless_charging_notification_message2">The battery is less than %s charged. Reverse wireless charging is turned off now.</string>
     <string name="wireless_charging_notification_message3">An error occurred during charging. Reverse wireless charging is turned off now.</string>
     <string name="wireless_charging_notification_titile">Turned off reverse wireless charging</string>
     <string name="xiaomi">Mi</string>
