--- a/venus/framework-res.apk/res/values/strings.xml
+++ b/venus/framework-res.apk/res/values/strings.xml
@@ -602,6 +602,7 @@ You can change this shortcut to another feature in Settings > Accessibility."</s
     <string name="config_useragentprofile_url" />
     <string name="config_wallpaperCropperPackage">com.android.wallpapercropper</string>
     <string name="config_wallpaperManagerServiceName">com.android.server.wallpaper.WallpaperManagerService</string>
+    <string name="config_wifi_tcp_buffers">524288,1048576,8808040,262144,524288,6710886</string>
     <string name="config_wifi_tether_enable">com.android.settings/.wifi.tether.TetherService</string>
     <string name="config_wimaxManagerClassname" />
     <string name="config_wimaxNativeLibLocation" />
